--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "eslint": "^9",
     "eslint-config-next": "15.2.1",
     "postcss": "^8.5.3",
+    "prisma": "^6.4.1",
     "tailwindcss": "^4.0.12",
     "typescript": "^5"
   },
   "dependencies": {
+    "@prisma/client": "^6.4.1",
     "next": "^14.2.24",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
