--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "next": "^14.2.24",
     "next-auth": "^4.24.11",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0"
   }
 }
