--- a/package.json
+++ b/package.json
@@ -26,11 +26,15 @@
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.4.1",
+    "axios": "^1.8.3",
     "bcrypt": "^5.1.1",
+    "clsx": "^2.1.1",
     "next": "^14.2.24",
     "next-auth": "^4.24.11",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.54.2",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0"
   }
 }
