--- a/package.json
+++ b/package.json
@@ -26,9 +26,12 @@
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.4.1",
+    "@radix-ui/react-slot": "^1.1.2",
     "axios": "^1.8.3",
     "bcrypt": "^5.1.1",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "lucide-react": "^0.482.0",
     "next": "^14.2.24",
     "next-auth": "^4.24.11",
     "react": "^18.3.1",
@@ -36,6 +39,8 @@
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
-    "swr": "^2.3.3"
+    "swr": "^2.3.3",
+    "tailwind-merge": "^3.0.2",
+    "tailwindcss-animate": "^1.0.7"
   }
 }
