--- a/.hintrc
+++ b/.hintrc
@@ -16,6 +16,12 @@
       {
         "button-name": "off"
       }
+    ],
+    "axe/text-alternatives": [
+      "default",
+      {
+        "frame-title": "off"
+      }
     ]
   }
 }
